Finalizando entradas fuzzy

--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-09-25 10:30+0100\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/2.3.rst:3
@@ -804,7 +804,6 @@ msgstr ""
 "atributo :attr:`propagate` a :const:`False`."
 
 #: ../Doc/whatsnew/2.3.rst:523
-#, fuzzy
 msgid ""
 "There are more classes provided by the :mod:`logging` package that can be "
 "customized.  When a :class:`Logger` instance is told to log a message, it "
@@ -816,16 +815,16 @@ msgid ""
 "by a :class:`Formatter` class.  All of these classes can be replaced by your "
 "own specially written classes."
 msgstr ""
-"Hay más clases proporcionadas por el paquete :mod:`logging` que pueden ser "
-"personalizadas.  Cuando una instancia de :class:`Logger` recibe la orden de "
-"registrar un mensaje, crea una instancia de :class:`LogRecord` que se envía "
-"a cualquier número de instancias de :class:`Handler` diferentes.  Los "
-"loggers y handlers también pueden tener una lista adjunta de filtros, y cada "
-"filtro puede hacer que el :class:`LogRecord` sea ignorado o puede modificar "
-"el registro antes de pasarlo.  Cuando finalmente se emiten, las instancias "
-"de :class:`LogRecord` se convierten en texto mediante una clase :class:"
-"`Formatter`.  Todas estas clases pueden ser reemplazadas por tus propias "
-"clases especialmente escritas."
+"Hay más clases proporcionadas por el paquete :mod:`logging` que se pueden "
+"personalizar. Cuando se le indica a una instancia :class:`Logger` que "
+"registre un mensaje, crea una instancia :class:`LogRecord` que se envía a "
+"cualquier cantidad de instancias :class:`Handler` diferentes. Los "
+"registradores y los controladores también pueden tener una lista adjunta de "
+"filtros, y cada filtro puede hacer que se ignore el :class:`LogRecord` o "
+"puede modificar el registro antes de pasarlo. Cuando finalmente se emiten, "
+"las instancias :class:`LogRecord` se convierten en texto mediante una clase :"
+"class:`Formatter`. Todas estas clases pueden ser reemplazadas por sus "
+"propias clases especialmente escritas."
 
 #: ../Doc/whatsnew/2.3.rst:533
 msgid ""
@@ -1651,7 +1650,6 @@ msgstr ""
 "codificación dada."
 
 #: ../Doc/whatsnew/2.3.rst:1080
-#, fuzzy
 msgid ""
 "The method resolution order used by new-style classes has changed, though "
 "you'll only notice the difference if you have a really complicated "
@@ -1666,19 +1664,19 @@ msgid ""
 "pipermail/python-dev/2002-October/029035.html. Samuele Pedroni first pointed "
 "out the problem and also implemented the fix by coding the C3 algorithm."
 msgstr ""
-"El orden de resolución de los métodos utilizados por las clases del nuevo "
-"estilo ha cambiado, aunque sólo notarás la diferencia si tienes una "
-"jerarquía de herencia realmente complicada.  Las clases clásicas no se ven "
-"afectadas por este cambio.  Python 2.2 originalmente utilizaba una "
-"ordenación topológica de los ancestros de una clase, pero 2.3 ahora utiliza "
-"el algoritmo C3 como se describe en el artículo `\"A Monotonic Superclass "
-"Linearization for Dylan\" <http://citeseerx.ist.psu.edu/viewdoc/summary?"
-"doi=10.1.1.19.3910>`_. Para entender la motivación de este cambio, lea el "
-"artículo de Michele Simionato `\"Python 2.3 Method Resolution Order\" "
-"<http://www.phyast.pitt.edu/~micheles/mro.html>`_, o lea el hilo en python-"
-"dev que comienza con el mensaje en https://mail.python.org/pipermail/python-"
-"dev/2002-October/029035.html. Samuele Pedroni fue el primero en señalar el "
-"problema y también implementó la solución codificando el algoritmo C3."
+"El orden de resolución de métodos utilizado por las clases de estilo nuevo "
+"ha cambiado, aunque solo notará la diferencia si tiene una jerarquía de "
+"herencia realmente complicada. Las clases clásicas no se ven afectadas por "
+"este cambio. Python 2.2 originalmente usó un tipo topológico de los "
+"ancestros de una clase, pero 2.3 ahora usa el algoritmo C3 como se describe "
+"en el documento `\"A Monotonic Superclass Linearization for Dylan\" <https://"
+"citeseerx.ist.psu.edu/viewdoc/summary?doi=10.1.1.19.3910>`_. Para comprender "
+"la motivación de este cambio, lea el artículo `\"Python 2.3 Method "
+"Resolution Order\" <http://www.phyast.pitt.edu/~micheles/mro.html>`_ de "
+"Michele Simionato, o lea el hilo en python-dev que comienza con el mensaje "
+"en https://mail.python.org/pipermail/python-dev/2002-October/029035.html . "
+"Samuele Pedroni fue el primero en señalar el problema y también implementó "
+"la solución codificando el algoritmo C3."
 
 #: ../Doc/whatsnew/2.3.rst:1093
 msgid ""
@@ -1930,15 +1928,14 @@ msgstr ""
 "(Contribución de Jason Orendorff)"
 
 #: ../Doc/whatsnew/2.3.rst:1233
-#, fuzzy
 msgid ""
 "The :mod:`bsddb` module has been replaced by version 4.1.6 of the `PyBSDDB "
 "<https://pybsddb.sourceforge.net>`_ package, providing a more complete "
 "interface to the transactional features of the BerkeleyDB library."
 msgstr ""
 "El módulo :mod:`bsddb` ha sido reemplazado por la versión 4.1.6 del paquete "
-"`PyBSDDB <http://pybsddb.sourceforge.net>`_, proporcionando una interfaz más "
-"completa para las características transaccionales de la biblioteca "
+"`PyBSDDB <https://pybsddb.sourceforge.net>`_, lo que proporciona una "
+"interfaz más completa para las funciones transaccionales de la biblioteca "
 "BerkeleyDB."
 
 #: ../Doc/whatsnew/2.3.rst:1237
@@ -3117,17 +3114,16 @@ msgstr ""
 "en su lugar, pero esto será más lento que usar :const:`METH_NOARGS`."
 
 #: ../Doc/whatsnew/2.3.rst:1907
-#, fuzzy
 msgid ""
 ":c:func:`PyArg_ParseTuple` accepts new format characters for various sizes "
 "of unsigned integers: ``B`` for :c:expr:`unsigned char`, ``H`` for :c:expr:"
 "`unsigned short int`,  ``I`` for :c:expr:`unsigned int`,  and ``K`` for :c:"
 "expr:`unsigned long long`."
 msgstr ""
-":c:func:`PyArg_ParseTuple` acepta nuevos caracteres de formato para varios "
-"tamaños de enteros sin signo: ``B`` para :c:type:`unsigned char`, ``H`` "
-"para :c:type:`unsigned short int`, ``I`` para :c:type:`unsigned int` y ``K`` "
-"para :c:type:`unsigned long long`."
+":c:func:`PyArg_ParseTuple` acepta caracteres de nuevo formato para varios "
+"tamaños de enteros sin signo: ``B`` para :c:expr:`unsigned char`, ``H`` "
+"para :c:expr:`unsigned short int`, ``I`` para :c:expr:`unsigned int`, y "
+"``K`` para :c:expr:`unsigned long long`."
 
 #: ../Doc/whatsnew/2.3.rst:1912
 msgid ""
