--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-09-06 09:08-0300\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/3.2.rst:3
@@ -34,7 +34,6 @@ msgid "Raymond Hettinger"
 msgstr "Raymond Hettinger"
 
 #: ../Doc/whatsnew/3.2.rst:51
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 3.2 as compared to 3.1. "
 "Python 3.2 was released on February 20, 2011. It focuses on a few highlights "
@@ -43,10 +42,10 @@ msgid ""
 "NEWS>`__ file."
 msgstr ""
 "Este artículo explica las nuevas características de Python 3.2 en "
-"comparación con 3.1. Se centra en algunos aspectos destacados y ofrece "
-"algunos ejemplos. Para obtener detalles completos, consulte el archivo `Misc/"
-"NEWS <https://github.com/python/cpython/"
-"blob/076ca6c3c8df3030307e548d9be792ce3c1c6eea/Misc/NEWS>`_ file."
+"comparación con 3.1. Python 3.2 se lanzó el 20 de febrero de 2011. Se centra "
+"en algunos aspectos destacados y ofrece algunos ejemplos. Para obtener "
+"detalles completos, consulte el archivo `Misc/NEWS <https://github.com/"
+"python/cpython/blob/076ca6c3c8df3030307e548d9be792ce3c1c6eea/Misc/NEWS>`__."
 
 #: ../Doc/whatsnew/3.2.rst:60
 msgid ":pep:`392` - Python 3.2 Release Schedule"
@@ -1172,14 +1171,14 @@ msgstr ""
 ":meth:`xml.etree.ElementTree.getiterator` usar ``Element.iter`` en su lugar."
 
 #: ../Doc/whatsnew/3.2.rst:747
-#, fuzzy
 msgid ""
 "For details of the update, see `Introducing ElementTree <https://web.archive."
 "org/web/20200703234532/http://effbot.org/zone/elementtree-13-intro.htm>`_ on "
 "Fredrik Lundh's website."
 msgstr ""
-"Para los detalles de la actualización, veer `Introducing ElementTree <http://"
-"effbot.org/zone/elementtree-13-intro.htm>`_ en el sitio web de Fredrik Lundh."
+"Para obtener más información sobre la actualización, consulte `Introducing "
+"ElementTree <https://web.archive.org/web/20200703234532/http://effbot.org/"
+"zone/elementtree-13-intro.htm>`_ en el sitio web de Fredrik Lundh."
 
 #: ../Doc/whatsnew/3.2.rst:751
 msgid "(Contributed by Florent Xicluna and Fredrik Lundh, :issue:`6472`.)"
@@ -1497,7 +1496,6 @@ msgstr ""
 "boletas se sellan y se depositan en una cola para su posterior manejo."
 
 #: ../Doc/whatsnew/3.2.rst:975
-#, fuzzy
 msgid ""
 "See `Barrier Synchronization Patterns <https://osl.cs.illinois.edu/media/"
 "papers/karmani-2009-barrier_synchronization_pattern.pdf>`_ for more examples "
@@ -1506,12 +1504,12 @@ msgid ""
 "<https://greenteapress.com/semaphores/LittleBookOfSemaphores.pdf>`_, "
 "*section 3.6*."
 msgstr ""
-"Consulte `Patrones de sincronización de barreras <http://osl.cs.illinois.edu/"
-"media/papers/karmani-2009-barrier_synchronization_pattern.pdf>` _ para ver "
-"más ejemplos de cómo se pueden utilizar las barreras en computación "
+"Consulte `Barrier Synchronization Patterns <https://osl.cs.illinois.edu/"
+"media/papers/karmani-2009-barrier_synchronization_pattern.pdf>`_ para "
+"obtener más ejemplos de cómo se pueden usar las barreras en la computación "
 "paralela. Además, hay una explicación simple pero completa de las barreras "
 "en `The Little Book of Semaphores <https://greenteapress.com/semaphores/"
-"LittleBookOfSemaphores.pdf>`_, *sección 3.6*."
+"LittleBookOfSemaphores.pdf>`_, *section 3.6*."
 
 #: ../Doc/whatsnew/3.2.rst:981
 msgid ""
@@ -2486,7 +2484,6 @@ msgstr ""
 "adecuadas para otros protocolos."
 
 #: ../Doc/whatsnew/3.2.rst:1647
-#, fuzzy
 msgid ""
 "The :func:`ssl.wrap_socket` constructor function now takes a *ciphers* "
 "argument.  The *ciphers* string lists the allowed encryption algorithms "
@@ -2495,8 +2492,8 @@ msgid ""
 msgstr ""
 "La función constructora :func:`ssl.wrap_socket` ahora toma un argumento "
 "*ciphers*. La cadena *ciphers* enumera los algoritmos de cifrado permitidos "
-"utilizando el formato descrito en la `documentación de OpenSSL <https://www."
-"openssl.org/docs/manmaster/man1/ciphers.html#CIPHER-LIST-FORMAT>`__."
+"utilizando el formato descrito en `OpenSSL documentation <https://www."
+"openssl.org/docs/man1.0.2/man1/ciphers.html#CIPHER-LIST-FORMAT>`__."
 
 #: ../Doc/whatsnew/3.2.rst:1652
 msgid ""
@@ -2711,7 +2708,6 @@ msgstr ""
 "métodos."
 
 #: ../Doc/whatsnew/3.2.rst:1745
-#, fuzzy
 msgid ""
 "The command-line call ``python -m unittest`` can now accept file paths "
 "instead of module names for running specific tests (:issue:`10620`).  The "
@@ -2721,13 +2717,13 @@ msgid ""
 "and a directory to start discovery with ``-s``:"
 msgstr ""
 "La llamada de línea de comandos ``python -m unittest`` ahora puede aceptar "
-"rutas de archivo en lugar de nombres de módulo para ejecutar pruebas "
+"rutas de archivos en lugar de nombres de módulos para ejecutar pruebas "
 "específicas (:issue:`10620`). El nuevo descubrimiento de pruebas puede "
-"encontrar pruebas dentro de paquetes, ubicando cualquier prueba importable "
-"desde el directorio de nivel superior. El directorio de nivel superior se "
-"puede especificar con la opción `-t`, un patrón para hacer coincidir "
-"archivos con ``-p`` y un directorio para iniciar el descubrimiento con ``-"
-"s``:"
+"encontrar pruebas dentro de los paquetes, localizando cualquier prueba que "
+"se pueda importar desde el directorio de nivel superior. El directorio de "
+"nivel superior se puede especificar con la opción ``-t``, un patrón para "
+"hacer coincidir archivos con ``-p`` y un directorio para iniciar el "
+"descubrimiento con ``-s``:"
 
 #: ../Doc/whatsnew/3.2.rst:1756 ../Doc/whatsnew/3.2.rst:1765
 #: ../Doc/whatsnew/3.2.rst:1921
@@ -2953,7 +2949,6 @@ msgid "asyncore"
 msgstr "asyncore"
 
 #: ../Doc/whatsnew/3.2.rst:1859
-#, fuzzy
 msgid ""
 ":class:`asyncore.dispatcher` now provides a :meth:`~asyncore.dispatcher."
 "handle_accepted()` method returning a ``(sock, addr)`` pair which is called "
@@ -2962,12 +2957,12 @@ msgid ""
 "dispatcher.handle_accept()` and avoids the user  to call :meth:`~asyncore."
 "dispatcher.accept()` directly."
 msgstr ""
-":class:`asyncore.dispatcher` ahora proporciona un :meth:`~asyncore."
-"dispatcher.handle_accepted()` que devuelve un par `(sock, addr)` que se "
-"llama cuando se ha establecido una conexión con un nuevo extremo remoto . Se "
-"supone que debe usarse como reemplazo del viejo :meth:`~asyncore.dispatcher."
-"handle_accept()` y evita que el usuario llame a :meth:`~asyncore.dispatcher."
-"accept()` directamente."
+":class:`asyncore.dispatcher` ahora proporciona un método :meth:`~asyncore."
+"dispatcher.handle_accepted()` que devuelve un par ``(sock, addr)`` al que se "
+"llama cuando se ha establecido realmente una conexión con un nuevo extremo "
+"remoto. Se supone que esto se usa como reemplazo del antiguo :meth:"
+"`~asyncore.dispatcher.handle_accept()` y evita que el usuario llame "
+"directamente a :meth:`~asyncore.dispatcher.accept()`."
 
 #: ../Doc/whatsnew/3.2.rst:1866
 msgid "(Contributed by Giampaolo Rodolà; :issue:`6706`.)"
@@ -3768,20 +3763,18 @@ msgid "Unicode"
 msgstr "Unicode"
 
 #: ../Doc/whatsnew/3.2.rst:2421
-#, fuzzy
 msgid ""
 "Python has been updated to `Unicode 6.0.0 <https://unicode.org/versions/"
 "Unicode6.0.0/>`_.  The update to the standard adds over 2,000 new characters "
 "including `emoji <https://en.wikipedia.org/wiki/Emoji>`_ symbols which are "
 "important for mobile phones."
 msgstr ""
-"Python se ha actualizado a `Unicode 6.0.0 <http://unicode.org/versions/"
-"Unicode6.0.0/>`_. La actualización del estándar agrega más de 2.000 "
+"Python se ha actualizado a `Unicode 6.0.0 <https://unicode.org/versions/"
+"Unicode6.0.0/>`_. La actualización del estándar agrega más de 2000 "
 "caracteres nuevos, incluidos los símbolos `emoji <https://en.wikipedia.org/"
 "wiki/Emoji>`_ que son importantes para los teléfonos móviles."
 
 #: ../Doc/whatsnew/3.2.rst:2426
-#, fuzzy
 msgid ""
 "In addition, the updated standard has altered the character properties for "
 "two Kannada characters (U+0CF1, U+0CF2) and one New Tai Lue numeric "
@@ -3790,12 +3783,12 @@ msgid ""
 "Database Changes <https://www.unicode.org/versions/Unicode6.0.0/"
 "#Database_Changes>`_."
 msgstr ""
-"Además, el estándar actualizado ha alterado las propiedades de los "
-"caracteres para dos caracteres Kannada (U+0CF1, U+0CF2) y un carácter "
-"numérico nuevo Tai Lue (U+19DA), lo que hace que el primero sea elegible "
-"para su uso en identificadores y descalifica al segundo. Para obtener más "
-"información, consulte `Cambios en la base de datos de caracteres Unicode "
-"<http://www.unicode.org/versions/Unicode6.0.0/#Database_Changes>`_."
+"Además, el estándar actualizado modificó las propiedades de dos caracteres "
+"de Kannada (U+0CF1, U+0CF2) y un carácter numérico New Tai Lue (U+19DA), lo "
+"que hace que el primero sea elegible para su uso en identificadores y "
+"descalifica al segundo. Para obtener más información, consulte `Unicode "
+"Character Database Changes <https://www.unicode.org/versions/Unicode6.0.0/"
+"#Database_Changes>`_."
 
 #: ../Doc/whatsnew/3.2.rst:2434
 msgid "Codecs"
@@ -3969,15 +3962,14 @@ msgid "Code Repository"
 msgstr "Repositorio de código"
 
 #: ../Doc/whatsnew/3.2.rst:2510
-#, fuzzy
 msgid ""
 "In addition to the existing Subversion code repository at https://svn.python."
 "org there is now a `Mercurial <https://www.mercurial-scm.org/>`_ repository "
 "at https://hg.python.org/\\ ."
 msgstr ""
-"Además del repositorio de código de Subversion existente en http://svn."
-"python.org, ahora hay un repositorio `Mercurial <https://www.mercurial-scm."
-"org/>`_ en https://hg.python.org/\\ ."
+"Además del repositorio de código Subversion existente en https://svn.python."
+"org, ahora hay un repositorio `Mercurial <https://www.mercurial-scm.org/>`_ "
+"en https://hg.python.org/\\."
 
 #: ../Doc/whatsnew/3.2.rst:2514
 msgid ""
@@ -4178,17 +4170,16 @@ msgstr ""
 "no se usa y nunca se había documentado (:issue:`8837`)."
 
 #: ../Doc/whatsnew/3.2.rst:2595
-#, fuzzy
 msgid ""
 "There were a number of other small changes to the C-API.  See the `Misc/NEWS "
 "<https://github.com/python/cpython/blob/v3.2.6/Misc/NEWS>`__ file for a "
 "complete list."
 msgstr ""
-"Hubo una serie de otros pequeños cambios en la C-API. Consulte el archivo :"
-"source:`Misc/NEWS` para obtener una lista completa."
+"Hubo una serie de otros pequeños cambios en la C-API. Consulte el archivo "
+"`Misc/NEWS <https://github.com/python/cpython/blob/v3.2.6/Misc/NEWS>`__ para "
+"obtener una lista completa."
 
 #: ../Doc/whatsnew/3.2.rst:2599
-#, fuzzy
 msgid ""
 "Also, there were a number of updates to the Mac OS X build, see `Mac/"
 "BuildScript/README.txt <https://github.com/python/cpython/blob/v3.2.6/Mac/"
@@ -4199,14 +4190,14 @@ msgid ""
 "downloads>`_\\. See https://www.python.org/download/mac/tcltk/ for "
 "additional details."
 msgstr ""
-"Además, hubo una serie de actualizaciones para la compilación de Mac OS X, "
-"consulte :source:`Mac/BuildScript/README.txt` para obtener más detalles. "
-"Para los usuarios que ejecutan una compilación de 32/64 bits, existe un "
-"problema conocido con el Tcl/Tk predeterminado en Mac OS X 10.6. En "
-"consecuencia, recomendamos instalar una alternativa actualizada como "
-"`ActiveState Tcl/Tk 8.5.9 <https://www.activestate.com/activetcl/"
-"downloads>`_\\. Consulte https://www.python.org/download/mac/tcltk/ para "
-"obtener detalles adicionales."
+"Además, hubo una serie de actualizaciones en la compilación de Mac OS X, "
+"consulte `Mac/BuildScript/README.txt <https://github.com/python/cpython/blob/"
+"v3.2.6/Mac/BuildScript/README.txt>`_ para obtener más detalles. Para los "
+"usuarios que ejecutan una compilación de 32/64 bits, existe un problema "
+"conocido con el Tcl/Tk predeterminado en Mac OS X 10.6. En consecuencia, "
+"recomendamos instalar una alternativa actualizada como `ActiveState Tcl/Tk "
+"8.5.9 <https://www.activestate.com/activetcl/downloads>`_\\. Consulte "
+"https://www.python.org/download/mac/tcltk/ para obtener detalles adicionales."
 
 #: ../Doc/whatsnew/3.2.rst:2608
 msgid "Porting to Python 3.2"
