--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-10-29 22:00-0500\n"
 "Last-Translator: Pedro Aarón <p.luis.aaron@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/3.3.rst:3
@@ -157,7 +157,6 @@ msgid "PEP 405: Virtual Environments"
 msgstr "PEP 405: Entornos virtuales"
 
 #: ../Doc/whatsnew/3.3.rst:102
-#, fuzzy
 msgid ""
 "Virtual environments help create separate Python setups while sharing a "
 "system-wide base install, for ease of maintenance.  Virtual environments "
@@ -167,14 +166,14 @@ msgid ""
 "``virtualenv`` third-party package, but benefit from tighter integration "
 "with the interpreter core."
 msgstr ""
-"Los entornos virtuales ayudan a crear instalaciones individuales de python "
-"que comparten la instalación base del sistema, ésto con la finalidad de "
-"facilitar el mantenimiento de las aplicaciones. Los entornos virtuales "
-"tienen su propio conjunto privado de paquetes de sitio (es decir, "
-"bibliotecas instaladas localmente), y opcionalmente van separados de los "
-"paquetes de sitio del sistema completo. Su concepto e implementación están "
-"inspirados en el popular paquete de terceros ``virtualenv``, pero cuenta con "
-"una integración más completa gracias al núcleo del intérprete."
+"Los entornos virtuales ayudan a crear configuraciones separadas de Python "
+"mientras comparten una instalación base en todo el sistema, para facilitar "
+"el mantenimiento. Los entornos virtuales tienen su propio conjunto de "
+"paquetes de sitios privados (es decir, bibliotecas instaladas localmente) y "
+"están opcionalmente segregados de los paquetes de sitios de todo el sistema. "
+"Su concepto e implementación están inspirados en el popular paquete de "
+"terceros ``virtualenv``, pero se benefician de una integración más estrecha "
+"con el núcleo del intérprete."
 
 #: ../Doc/whatsnew/3.3.rst:110
 msgid ""
@@ -1584,15 +1583,14 @@ msgid "lzma"
 msgstr "lzma"
 
 #: ../Doc/whatsnew/3.3.rst:901
-#, fuzzy
 msgid ""
 "The newly added :mod:`lzma` module provides data compression and "
 "decompression using the LZMA algorithm, including support for the ``.xz`` "
 "and ``.lzma`` file formats."
 msgstr ""
-"El módulo recién agregado :mod:`lzma` proporciona compresión y descompresión "
-"de datos usando el algoritmo LZMA, incluyendo compatibilidad para los "
-"formatos de archivos ``.xz`` y ``.lzma``."
+"El módulo :mod:`lzma` recién agregado proporciona compresión y descompresión "
+"de datos utilizando el algoritmo LZMA, incluida la compatibilidad con los "
+"formatos de archivo ``.xz`` y ``.lzma``."
 
 #: ../Doc/whatsnew/3.3.rst:905
 msgid "(Contributed by Nadeem Vawda and Per Øyvind Karlsen in :issue:`6715`.)"
@@ -1661,13 +1659,12 @@ msgid "array"
 msgstr "array"
 
 #: ../Doc/whatsnew/3.3.rst:935
-#, fuzzy
 msgid ""
 "The :mod:`array` module supports the :c:expr:`long long` type using ``q`` "
 "and ``Q`` type codes."
 msgstr ""
-"El módulo :mod:`array` admite el tipo :c:type:`long long` usando los códigos "
-"de tipo ``q`` y ``Q``."
+"El módulo :mod:`array` admite el tipo :c:expr:`long long` utilizando los "
+"códigos de tipo ``q`` y ``Q``."
 
 #: ../Doc/whatsnew/3.3.rst:938
 msgid "(Contributed by Oren Tirosh and Hirokazu Yamamoto in :issue:`1172711`.)"
@@ -2013,7 +2010,6 @@ msgid "C-module and libmpdec written by Stefan Krah."
 msgstr "Módulo C y libmpdec escritos por Stefan Krah."
 
 #: ../Doc/whatsnew/3.3.rst:1098
-#, fuzzy
 msgid ""
 "The new C version of the decimal module integrates the high speed libmpdec "
 "library for arbitrary precision correctly rounded decimal floating point "
@@ -2021,9 +2017,9 @@ msgid ""
 "Specification."
 msgstr ""
 "La nueva versión C del módulo decimal integra la biblioteca libmpdec de alta "
-"velocidad para una precisión arbitraria de aritmética de decimales de punto "
-"flotante correctamente redondeada. Libmpdec se ajusta a la especificación "
-"general aritmética decimal de IBM."
+"velocidad para aritmética de coma flotante decimal redondeada correctamente "
+"con precisión arbitraria. libmpdec se ajusta a la especificación de "
+"aritmética decimal general de IBM."
 
 #: ../Doc/whatsnew/3.3.rst:1102
 msgid ""
@@ -2042,14 +2038,13 @@ msgstr ""
 "mayores."
 
 #: ../Doc/whatsnew/3.3.rst:1108
-#, fuzzy
 msgid ""
 "The following table is meant as an illustration. Benchmarks are available at "
 "https://www.bytereef.org/mpdecimal/quickstart.html."
 msgstr ""
-"La siguiente tabla se entiende como una ilustración. Los puntos de "
-"referencia están disponibles en http://www.bytereef.org/mpdecimal/quickstart."
-"html."
+"La siguiente tabla está pensada como una ilustración. Los puntos de "
+"referencia están disponibles en https://www.bytereef.org/mpdecimal/"
+"quickstart.html."
 
 #: ../Doc/whatsnew/3.3.rst:1112
 msgid "decimal.py"
@@ -2206,18 +2201,16 @@ msgstr ""
 "inexacto."
 
 #: ../Doc/whatsnew/3.3.rst:1161
-#, fuzzy
 msgid ""
 "The power function in decimal.py is always correctly rounded. In the C "
 "version, it is defined in terms of the correctly rounded :meth:`~decimal."
 "Decimal.exp` and :meth:`~decimal.Decimal.ln` functions, but the final result "
 "is only \"almost always correctly rounded\"."
 msgstr ""
-"La función de potencia en decimal.py siempre es redondeada de forma "
-"correcta. En la versión C, se define en términos de las funciones "
-"correctamente redondeadas :meth:`~decimal.Decimal.exp` y :meth:`~decimal."
-"Decimal.ln`, pero el resultado final es sólo \"casi siempre correctamente "
-"redondeado\"."
+"La función de potencia en decimal.py siempre se redondea correctamente. En "
+"la versión C, se define en términos de las funciones :meth:`~decimal.Decimal."
+"exp` y :meth:`~decimal.Decimal.ln` correctamente redondeadas, pero el "
+"resultado final es solo \"casi siempre correctamente redondeado\"."
 
 #: ../Doc/whatsnew/3.3.rst:1167
 msgid ""
@@ -3750,15 +3743,14 @@ msgstr ""
 "`13777`.)"
 
 #: ../Doc/whatsnew/3.3.rst:1900
-#, fuzzy
 msgid ""
 "New function :func:`~socket.sethostname` allows the hostname to be set on "
 "Unix systems if the calling process has sufficient privileges. (Contributed "
 "by Ross Lagerwall in :issue:`10866`.)"
 msgstr ""
-"La nueva función :func:`~socket.sethostname` permite establecer el nombre "
-"del host en los sistemas unix si el proceso de llamada tiene suficientes "
-"privilegios. (Contribución de Ross Lagerwall en :issue:`10866`.)"
+"La nueva función :func:`~socket.sethostname` permite establecer el nombre de "
+"host en sistemas Unix si el proceso de llamada tiene suficientes "
+"privilegios. (Aportado por Ross Lagerwall en :issue:`10866`.)"
 
 #: ../Doc/whatsnew/3.3.rst:1906
 msgid "socketserver"
@@ -4237,15 +4229,14 @@ msgid "zlib"
 msgstr "zlib"
 
 #: ../Doc/whatsnew/3.3.rst:2139
-#, fuzzy
 msgid ""
 "New attribute :attr:`zlib.Decompress.eof` makes it possible to distinguish "
 "between a properly formed compressed stream and an incomplete or truncated "
 "one. (Contributed by Nadeem Vawda in :issue:`12646`.)"
 msgstr ""
-"Nuevo atributo :attr:`zlib.Decompress.eof` permite distinguir entre un flujo "
-"comprimido, correctamente formado, y uno incompleto o truncado. "
-"(Contribución de Nadeem Vawda in :issue:`12646`. )"
+"El nuevo atributo :attr:`zlib.Decompress.eof` permite distinguir entre un "
+"flujo comprimido correctamente formado y uno incompleto o truncado. "
+"(Aportado por Nadeem Vawda en :issue:`12646`.)"
 
 #: ../Doc/whatsnew/3.3.rst:2143
 msgid ""
@@ -4554,13 +4545,12 @@ msgstr ""
 "en Python 4. Todas las funciones que utilizan éste tipo quedarán en desuso:"
 
 #: ../Doc/whatsnew/3.3.rst:2269
-#, fuzzy
 msgid ""
 "Unicode functions and methods using :c:type:`Py_UNICODE` and :c:expr:"
 "`Py_UNICODE*` types:"
 msgstr ""
-"Las funciones Unicode, y los métodos que usen los tipos :c:type:`Py_UNICODE` "
-"and :c:type:`Py_UNICODE*`:"
+"Funciones y métodos Unicode que utilizan los tipos :c:type:`Py_UNICODE` y :c:"
+"expr:`Py_UNICODE*`:"
 
 #: ../Doc/whatsnew/3.3.rst:2272
 msgid ""
@@ -4897,7 +4887,6 @@ msgstr ""
 "implícitos, pero semánticamente no debería cambiar nada."
 
 #: ../Doc/whatsnew/3.3.rst:2392
-#, fuzzy
 msgid ""
 ":class:`importlib.abc.Finder` no longer specifies a ``find_module()`` "
 "abstract method that must be implemented. If you were relying on subclasses "
@@ -4906,11 +4895,11 @@ msgid ""
 "in the case of working with :term:`path entry finders <path entry finder>`."
 msgstr ""
 ":class:`importlib.abc.Finder` ya no especifica un método abstracto "
-"`find_module()` que deba ser implementado. Si confiaba en subclases para "
-"implementar éste método, primero asegúrese de verificar la existencia del "
-"método. Sin embargo, probablemente desee verificar primero el "
-"`find_loader()`, en el caso de trabajar con los buscadores de entradas :term:"
-"`path entry finders <path entry finder>`."
+"``find_module()`` que debe implementarse. Si confiaba en subclases para "
+"implementar ese método, asegúrese de verificar primero la existencia del "
+"método. Sin embargo, probablemente querrá verificar primero "
+"``find_loader()``, en el caso de trabajar con :term:`path entry finders "
+"<path entry finder>`."
 
 #: ../Doc/whatsnew/3.3.rst:2398
 msgid ""
