--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -33,15 +33,14 @@ msgid "Raymond Hettinger"
 msgstr "Raymond Hettinger"
 
 #: ../Doc/whatsnew/3.8.rst:47
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 3.8, compared to 3.7. "
 "Python 3.8 was released on October 14, 2019. For full details, see the :ref:"
 "`changelog <changelog>`."
 msgstr ""
 "Este artículo explica las nuevas características de Python 3.8, en "
-"comparación con 3.7. Para obtener los detalles completos, consultar el :ref:"
-"`registro de cambios <changelog>`."
+"comparación con 3.7. Python 3.8 se lanzó el 14 de octubre de 2019. Para "
+"obtener detalles completos, consulte :ref:`changelog <changelog>`."
 
 #: ../Doc/whatsnew/3.8.rst:61
 msgid "Summary -- Release highlights"
@@ -2228,13 +2227,12 @@ msgid "unicodedata"
 msgstr "unicodedata"
 
 #: ../Doc/whatsnew/3.8.rst:1350
-#, fuzzy
 msgid ""
 "The :mod:`unicodedata` module has been upgraded to use the `Unicode 12.1.0 "
 "<https://blog.unicode.org/2019/05/unicode-12-1-en.html>`_ release."
 msgstr ""
-"El módulo :mod:`unicodedata` ha sido actualizado para usar `Unicode 12.1.0 "
-"<http://blog.unicode.org/2019/05/unicode-12-1-en.html>`_."
+"El módulo :mod:`unicodedata` se ha actualizado para usar la versión `Unicode "
+"12.1.0 <https://blog.unicode.org/2019/05/unicode-12-1-en.html>`_."
 
 #: ../Doc/whatsnew/3.8.rst:1353
 msgid ""
@@ -2495,15 +2493,14 @@ msgstr ""
 "menor tamaño, en comparación con el Protocolo 3 disponible desde Python 3.0."
 
 #: ../Doc/whatsnew/3.8.rst:1495
-#, fuzzy
 msgid ""
 "Removed one :c:type:`Py_ssize_t` member from ``PyGC_Head``.  All GC tracked "
 "objects (e.g. tuple, list, dict) size is reduced 4 or 8 bytes. (Contributed "
 "by Inada Naoki in :issue:`33597`.)"
 msgstr ""
-"Eliminado un miembro ``Py_ssize_t`` de ``PyGC_Head``. El tamaño de todos los "
-"objetos seguidos por el GC (por ejemplo tuple, list y dict) se ha reducido 4 "
-"u 8 bytes. (Contribución de Inada Naoki en :issue:`33597`.)"
+"Se eliminó un miembro :c:type:`Py_ssize_t` de ``PyGC_Head``. El tamaño de "
+"todos los objetos rastreados de GC (por ejemplo, tupla, lista, dict) se "
+"reduce en 4 u 8 bytes. (Aportado por Inada Naoki en :issue:`33597`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1499
 msgid ""
@@ -3680,17 +3677,16 @@ msgid "Changes in the C API"
 msgstr "Cambios en la API de C"
 
 #: ../Doc/whatsnew/3.8.rst:2015
-#, fuzzy
 msgid ""
 "The :c:struct:`PyCompilerFlags` structure got a new *cf_feature_version* "
 "field. It should be initialized to ``PY_MINOR_VERSION``. The field is "
 "ignored by default, and is used if and only if ``PyCF_ONLY_AST`` flag is set "
 "in *cf_flags*. (Contributed by Guido van Rossum in :issue:`35766`.)"
 msgstr ""
-"La estructura :c:type:`PyCompilerFlags` tiene un nuevo campo "
+"La estructura :c:struct:`PyCompilerFlags` obtuvo un nuevo campo "
 "*cf_feature_version*. Debe inicializarse en ``PY_MINOR_VERSION``. El campo "
-"se ignora de forma predeterminada y se usa, si y solo si, el flag "
-"``PyCF_ONLY_AST`` está establecido en *cf_flags*. (Contribución de Guido van "
+"se ignora de forma predeterminada y se usa solo si el indicador "
+"``PyCF_ONLY_AST`` está establecido en *cf_flags*. (Aportado por Guido van "
 "Rossum en :issue:`35766`.)"
 
 #: ../Doc/whatsnew/3.8.rst:2021
