--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-10-03 10:57-0300\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/2.5.rst:3
@@ -3585,6 +3585,8 @@ msgid ""
 "https://web.archive.org/web/20160331090247/http://wsgi.readthedocs.org/en/"
 "latest/"
 msgstr ""
+"https://web.archive.org/web/20160331090247/http://wsgi.readthedocs.org/en/"
+"latest/"
 
 #: ../Doc/whatsnew/2.5.rst:2069
 msgid "A central web site for WSGI-related resources."
