--- a/whatsnew/3.1.po
+++ b/whatsnew/3.1.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2020-10-22 15:48+0200\n"
 "Last-Translator: \n"
-"Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/whatsnew/3.1.rst:3
@@ -34,13 +34,12 @@ msgid "Raymond Hettinger"
 msgstr "Raymond Hettinger"
 
 #: ../Doc/whatsnew/3.1.rst:49
-#, fuzzy
 msgid ""
 "This article explains the new features in Python 3.1, compared to 3.0. "
 "Python 3.1 was released on June 27, 2009."
 msgstr ""
-"En este artículo se explican las nuevas características de Python 3.1, en "
-"comparación con 3.0."
+"Este artículo explica las nuevas características de Python 3.1, en "
+"comparación con 3.0. Python 3.1 se lanzó el 27 de junio de 2009."
 
 #: ../Doc/whatsnew/3.1.rst:54
 msgid "PEP 372: Ordered Dictionaries"
@@ -77,7 +76,6 @@ msgstr ""
 "insertarla la moverá hasta el final."
 
 #: ../Doc/whatsnew/3.1.rst:68
-#, fuzzy
 msgid ""
 "The standard library now supports use of ordered dictionaries in several "
 "modules.  The :mod:`configparser` module uses them by default.  This lets "
@@ -91,13 +89,13 @@ msgid ""
 msgstr ""
 "La biblioteca estándar ahora admite el uso de diccionarios ordenados en "
 "varios módulos. El módulo :mod:`configparser` los usa por defecto. Esto "
-"permite que los archivos de configuración se lean, modifiquen y luego se "
-"vuelvan a escribir en su orden original. El método *_asdict()* para :func:"
-"`collections.namedtuple` ahora retorna un diccionario ordenado con los "
-"valores que aparecen en el mismo orden que los índices de tupla subyacentes. "
-"El módulo :mod:`json` se está construyendo con un *object_pairs_hook* para "
-"permitir que el decodificador construya OrderedDicts. También se agregó "
-"soporte para herramientas de terceros como `PyYAML <http://pyyaml.org/>`_."
+"permite leer, modificar y volver a escribir los archivos de configuración en "
+"su orden original. El método *_asdict()* para :func:`collections.namedtuple` "
+"ahora devuelve un diccionario ordenado con los valores que aparecen en el "
+"mismo orden que los índices de tupla subyacentes. El módulo :mod:`json` se "
+"está construyendo con un *object_pairs_hook* para permitir que el "
+"decodificador construya OrderedDicts. También se agregó soporte para "
+"herramientas de terceros como `PyYAML <https://pyyaml.org/>`_."
 
 #: ../Doc/whatsnew/3.1.rst:80
 msgid ":pep:`372` - Ordered Dictionaries"
@@ -754,7 +752,6 @@ msgstr ""
 "(Contribución de Antoine Pitrou y Amaury Forgeot d'Arc, :issue:`4868`.)"
 
 #: ../Doc/whatsnew/3.1.rst:451
-#, fuzzy
 msgid ""
 "The :mod:`json` module now has a C extension to substantially improve its "
 "performance.  In addition, the API was modified so that json works only "
@@ -762,11 +759,11 @@ msgid ""
 "closely match the `JSON specification <https://json.org/>`_ which is defined "
 "in terms of Unicode."
 msgstr ""
-"El módulo :mod:`json` tiene ahora una extensión C para mejorar "
-"sustancialmente su desempeño.  Además, la API fue modificada para que json "
-"trabaje solo con :class:`str`, no con :class:`bytes`.  Este cambio hace que "
-"el módulo coincida con la `especificación de JSON <https://www.json.org/json-"
-"es.html>`_ que es definida en términos de Unicode."
+"El módulo :mod:`json` ahora tiene una extensión C para mejorar "
+"sustancialmente su rendimiento. Además, se modificó la API para que json "
+"funcione solo con :class:`str`, no con :class:`bytes`. Ese cambio hace que "
+"el módulo coincida estrechamente con el `JSON specification <https://json."
+"org/>`_ que se define en términos de Unicode."
 
 #: ../Doc/whatsnew/3.1.rst:457
 msgid ""
