--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -535,7 +535,6 @@ msgid "PEP 539: New C API for Thread-Local Storage"
 msgstr "PEP 539: Nueva API C para almacenamiento local de subprocesos"
 
 #: ../Doc/whatsnew/3.7.rst:291
-#, fuzzy
 msgid ""
 "While Python provides a C API for thread-local storage support; the "
 "existing :ref:`Thread Local Storage (TLS) API <thread-local-storage-api>` "
@@ -544,14 +543,13 @@ msgid ""
 "neither POSIX-compliant, nor portable in any practical sense."
 msgstr ""
 "Mientras que Python proporciona una API C para soporte de almacenamiento "
-"local de subprocesos; la existencia :ref:`Almacenamiento local de "
-"subprocesos (TLS) API <thread-local-storage-api>` ha usado :c:type:`int` "
-"para representar llaves TLS a través de todas las plataformas. En general, "
-"esto no ha sido un problema para las plataformas de soporte oficial, pero no "
-"es compatible con POSIX ni es portátil en ningún sentido práctico."
+"local de subprocesos; el :ref:`Thread Local Storage (TLS) API <thread-local-"
+"storage-api>` existente ha usado :c:expr:`int` para representar claves TLS "
+"en todas las plataformas. En general, esto no ha sido un problema para las "
+"plataformas de soporte oficial, pero no es compatible con POSIX ni portátil "
+"en ningún sentido práctico."
 
 #: ../Doc/whatsnew/3.7.rst:297
-#, fuzzy
 msgid ""
 ":pep:`539` changes this by providing a new :ref:`Thread Specific Storage "
 "(TSS) API <thread-specific-storage-api>` to CPython which supersedes use of "
@@ -562,18 +560,17 @@ msgid ""
 "build CPython on platforms where the native TLS key is defined in a way that "
 "cannot be safely cast to :c:expr:`int`."
 msgstr ""
-":pep:`539` cambio esto proporcionado un nuevo :ref:`Almacenamiento "
-"especifico de subprocesos (TSS) API <thread-specific-storage-api>` para "
-"CPython que reemplaza el uso de la API de TLS existente dentro del "
-"intérprete de CPython, mientras que desaprueba la API existente. La API de "
-"TSS usa un nuevo tipo :c:type:`Py_tss_t` en lugar de :c:type:`int` para "
-"representar llaves TSS — un tipo opaco cuya definición puede depender de la "
-"implementación TLS subyacente. Por lo tanto, esto permitirá construir "
-"CPython en plataformas dónde la clave TLS nativa está definida de una manera "
-"que no se puede convertir de manera segura a :c:type:`int`."
+":pep:`539` cambia esto al proporcionar un nuevo :ref:`Thread Specific "
+"Storage (TSS) API <thread-specific-storage-api>` a CPython que reemplaza el "
+"uso de la API TLS existente dentro del intérprete de CPython, al tiempo que "
+"deja obsoleta la API existente. La API de TSS utiliza un nuevo tipo :c:type:"
+"`Py_tss_t` en lugar de :c:expr:`int` para representar claves TSS, un tipo "
+"opaco cuya definición puede depender de la implementación de TLS subyacente. "
+"Por lo tanto, esto permitirá compilar CPython en plataformas donde la clave "
+"TLS nativa se define de una manera que no se puede convertir de manera "
+"segura a :c:expr:`int`."
 
 #: ../Doc/whatsnew/3.7.rst:306
-#, fuzzy
 msgid ""
 "Note that on platforms where the native TLS key is defined in a way that "
 "cannot be safely cast to :c:expr:`int`, all functions of the existing TLS "
@@ -581,12 +578,12 @@ msgid ""
 "that the old API is not supported on platforms where it cannot be used "
 "reliably, and that no effort will be made to add such support."
 msgstr ""
-"Tenga en cuenta que en las plataformas donde la clave TLS nativa se define "
-"de una manera que no se puede convertir de forma segura a :c:type:`int`, "
-"todas las funciones de la API TLS existente serán inactivas y devolverán el "
-"error inmediatamente. Esto indica claramente que la API anterior no es "
-"compatible con plataformas en las que no se puede usar de manera confiable y "
-"que no se hará ningún esfuerzo para agregar dicha compatibilidad."
+"Tenga en cuenta que en las plataformas en las que la clave TLS nativa se "
+"define de una manera que no se puede convertir de forma segura a :c:expr:"
+"`int`, todas las funciones de la API de TLS existente no funcionarán e "
+"inmediatamente devolverán un error. Esto indica claramente que la antigua "
+"API no es compatible con plataformas en las que no se puede usar de manera "
+"confiable y que no se hará ningún esfuerzo para agregar dicho soporte."
 
 #: ../Doc/whatsnew/3.7.rst:314
 msgid ":pep:`539` -- A New C-API for Thread-Local Storage in CPython"
@@ -678,15 +675,14 @@ msgstr ""
 "entero."
 
 #: ../Doc/whatsnew/3.7.rst:356
-#, fuzzy
 msgid ""
 "`Measurements <https://peps.python.org/pep-0564/#annex-clocks-resolution-in-"
 "python>`_ show that on Linux and Windows the resolution of :func:`time."
 "time_ns` is approximately 3 times better than that of :func:`time.time`."
 msgstr ""
-"`Mediciones <https://www.python.org/dev/peps/pep-0564/#annex-clocks-"
-"resolution-in-python>`_ se muestra en Linux y Windows la resolución de :func:"
-"`time.time_ns` es aproximadamente 3 veces mejor que el de :func:`time.time`."
+"`Measurements <https://peps.python.org/pep-0564/#annex-clocks-resolution-in-"
+"python>`_ muestra que en Linux y Windows la resolución de :func:`time."
+"time_ns` es aproximadamente 3 veces mejor que la de :func:`time.time`."
 
 #: ../Doc/whatsnew/3.7.rst:362
 msgid ":pep:`564` -- Add new time functions with nanosecond resolution"
@@ -1155,13 +1151,12 @@ msgid "Contributed by Barry Warsaw and Brett Cannon in :issue:`32248`."
 msgstr "Contribuido por *Barry Warsaw* y *Brett Cannon* en :issue:`32248`."
 
 #: ../Doc/whatsnew/3.7.rst:614
-#, fuzzy
 msgid ""
 "`importlib_resources <https://importlib-resources.readthedocs.io/en/latest/"
 ">`_ -- a PyPI backport for earlier Python versions."
 msgstr ""
-"`importlib_resources <http://importlib-resources.readthedocs.io/en/latest/"
-">`_ -- un *backport* de PyPI para versiones anteriores de Python."
+"`importlib_resources <https://importlib-resources.readthedocs.io/en/latest/"
+">`_: un backport de PyPI para versiones anteriores de Python."
 
 #: ../Doc/whatsnew/3.7.rst:619
 msgid "Improved Modules"
@@ -2278,15 +2273,14 @@ msgstr ""
 "en :issue:`31368`.)"
 
 #: ../Doc/whatsnew/3.7.rst:1177
-#, fuzzy
 msgid ""
 "The mode argument of :func:`os.makedirs` no longer affects the file "
 "permission bits of newly created intermediate-level directories. "
 "(Contributed by Serhiy Storchaka in :issue:`19930`.)"
 msgstr ""
-"El argumento de modo de :func:`os.makedirs` ya no afecta a los bits de "
-"permisos de archivos de los directorios de nivel intermedio recién creados. "
-"(Contribuido por *Serhiy Storchaka* en :issue:`19930`.)"
+"El argumento de modo de :func:`os.makedirs` ya no afecta los bits de permiso "
+"de archivo de los directorios de nivel intermedio recién creados. (Aportado "
+"por Serhiy Storchaka en :issue:`19930`.)"
 
 #: ../Doc/whatsnew/3.7.rst:1181
 msgid ""
@@ -2949,15 +2943,14 @@ msgid "unicodedata"
 msgstr "*unicodedata*"
 
 #: ../Doc/whatsnew/3.7.rst:1509
-#, fuzzy
 msgid ""
 "The internal :mod:`unicodedata` database has been upgraded to use `Unicode "
 "11 <https://www.unicode.org/versions/Unicode11.0.0/>`_. (Contributed by "
 "Benjamin Peterson.)"
 msgstr ""
-"La base de datos interna :mod:`unicodedata` ha sido actualizada para usar "
-"`Unicode 11 <http://www.unicode.org/versions/Unicode11.0.0/>`_. (Contribuido "
-"por *Benjamin Peterson*.)"
+"La base de datos interna :mod:`unicodedata` se actualizó para usar `Unicode "
+"11 <https://www.unicode.org/versions/Unicode11.0.0/>`_. (Aportado por "
+"Benjamín Peterson.)"
 
 #: ../Doc/whatsnew/3.7.rst:1515
 msgid "unittest"
@@ -3382,7 +3375,6 @@ msgstr ""
 "`PyDateTime_TimeZone_UTC`. Contribuido por *Paul Ganssle* en :issue:`10381`."
 
 #: ../Doc/whatsnew/3.7.rst:1709
-#, fuzzy
 msgid ""
 "The type of results of :c:func:`PyThread_start_new_thread` and :c:func:"
 "`PyThread_get_thread_ident`, and the *id* parameter of :c:func:"
@@ -3391,19 +3383,18 @@ msgid ""
 msgstr ""
 "El tipo de resultados de :c:func:`PyThread_start_new_thread` y :c:func:"
 "`PyThread_get_thread_ident`, y el parámetro *id* de :c:func:"
-"`PyThreadState_SetAsyncExc` cambiaron desde :c:type:`long` a :c:type:"
-"`unsigned long`. (Contribuido por *Serhiy Storchaka* en :issue:`6532`.)"
+"`PyThreadState_SetAsyncExc` cambió de :c:expr:`long` a :c:expr:`unsigned "
+"long`. (Aportado por Serhiy Storchaka en :issue:`6532`.)"
 
 #: ../Doc/whatsnew/3.7.rst:1715
-#, fuzzy
 msgid ""
 ":c:func:`PyUnicode_AsWideCharString` now raises a :exc:`ValueError` if the "
 "second argument is ``NULL`` and the :c:expr:`wchar_t*` string contains null "
 "characters.  (Contributed by Serhiy Storchaka in :issue:`30708`.)"
 msgstr ""
 ":c:func:`PyUnicode_AsWideCharString` ahora genera un :exc:`ValueError` si el "
-"segundo argumento es ``NULL`` y la cadena :c:type:`wchar_t*` contiene "
-"caracteres nulos. (Contribuido por *Serhiy Storchaka* en :issue:`30708`.)"
+"segundo argumento es ``NULL`` y la cadena :c:expr:`wchar_t*` contiene "
+"caracteres nulos. (Aportado por Serhiy Storchaka en :issue:`30708`.)"
 
 #: ../Doc/whatsnew/3.7.rst:1719
 msgid ""
@@ -4210,7 +4201,6 @@ msgstr ""
 "la configuración de compilación predeterminada."
 
 #: ../Doc/whatsnew/3.7.rst:2123
-#, fuzzy
 msgid ""
 "CPython's own `CI configuration file <https://github.com/python/cpython/blob/"
 "v3.7.13/.travis.yml>`_ provides an example of using the SSL :source:"
@@ -4218,12 +4208,11 @@ msgid ""
 "CPython's test suite to build and link against OpenSSL 1.1.0 rather than an "
 "outdated system provided OpenSSL."
 msgstr ""
-"El propio `archivo de configuración CI <https://github.com/python/cpython/"
-"blob/v3.7.13/.travis.yml>`_ de CPython proporciona un ejemplo de uso de la :"
-"source:`compatibilidad con la infraestructura de pruebas <Tools/ssl/"
-"multissltests.py>` SSL en el conjunto de pruebas de CPython para construir y "
-"vincular hacia OpenSSL 1.1.0 en lugar de un sistema obsoleto proporcionado "
-"por OpenSSL."
+"El propio `CI configuration file <https://github.com/python/cpython/blob/"
+"v3.7.13/.travis.yml>`_ de CPython proporciona un ejemplo del uso de SSL :"
+"source:`compatibility testing infrastructure <Tools/ssl/multissltests.py>` "
+"en el conjunto de pruebas de CPython para crear y vincular OpenSSL 1.1.0 en "
+"lugar de un sistema obsoleto proporcionado por OpenSSL."
 
 #: ../Doc/whatsnew/3.7.rst:2132
 msgid "API and Feature Removals"
@@ -4572,18 +4561,16 @@ msgstr ""
 "para configurarlos. (Contribuido por *Serhiy Storchaka* en :issue:`29192`.)"
 
 #: ../Doc/whatsnew/3.7.rst:2298
-#, fuzzy
 msgid ""
 "The *mode* argument of :func:`os.makedirs` no longer affects the file "
 "permission bits of newly created intermediate-level directories. To set "
 "their file permission bits you can set the umask before invoking "
 "``makedirs()``. (Contributed by Serhiy Storchaka in :issue:`19930`.)"
 msgstr ""
-"El argumento * modo * de :func:`os.makedirs` ya no afecta a los bits de "
-"permisos de archivos de los directorios de nivel intermedio recién creados. "
-"Para configurar sus bits de permiso de archivo, puede configurar la máscara "
-"de usuario antes de invocar ```makedirs()``. (Contribuido por *Serhiy "
-"Storchaka* en :issue:`19930`.)"
+"El argumento *mode* de :func:`os.makedirs` ya no afecta los bits de permiso "
+"de archivo de los directorios de nivel intermedio recién creados. Para "
+"configurar sus bits de permiso de archivo, puede configurar umask antes de "
+"invocar ``makedirs()``. (Aportado por Serhiy Storchaka en :issue:`19930`.)"
 
 #: ../Doc/whatsnew/3.7.rst:2304
 msgid ""
@@ -4956,17 +4943,16 @@ msgstr ""
 "(Contribuido por *Mark Shannon* en :issue:`32550`.)"
 
 #: ../Doc/whatsnew/3.7.rst:2476
-#, fuzzy
 msgid ""
 "The file used to override :data:`sys.path` is now called ``<python-"
 "executable>._pth`` instead of ``'sys.path'``. See :ref:"
 "`windows_finding_modules` for more information. (Contributed by Steve Dower "
 "in :issue:`28137`.)"
 msgstr ""
-"El archivo utilizado para anular :data:`sys.path` es ahora llamado ``<python-"
-"executable>._pth`` en lugar de ``’sys.path’``. Consultar :ref:"
-"`finding_modules` para mas información. (Contribuido por *Steve Dower* en :"
-"issue:`28137`.)"
+"El archivo utilizado para anular :data:`sys.path` ahora se llama ``<python-"
+"executable>._pth`` en lugar de ``'sys.path'``. Consulte :ref:"
+"`windows_finding_modules` para obtener más información. (Aportado por Steve "
+"Dower en :issue:`28137`.)"
 
 #: ../Doc/whatsnew/3.7.rst:2483
 msgid "Other CPython implementation changes"
@@ -5001,15 +4987,15 @@ msgstr ""
 "varios otros números). Algunos detalles conocidos afectados:"
 
 #: ../Doc/whatsnew/3.7.rst:2498
-#, fuzzy
 msgid ""
 ":c:func:`PySys_AddWarnOptionUnicode` is not currently usable by embedding "
 "applications due to the requirement to create a Unicode object prior to "
 "calling ``Py_Initialize``. Use :c:func:`PySys_AddWarnOption` instead."
 msgstr ""
-":c:func:`PySys_AddWarnOptionUnicode` actualmente no se puede utilizar para "
-"incrustar aplicaciones debido al requisito de crear un objeto Unicode antes "
-"de llamar `Py_Initialize`. En su lugar use :c:func:`PySys_AddWarnOption`."
+"Actualmente, :c:func:`PySys_AddWarnOptionUnicode` no se puede usar mediante "
+"la incorporación de aplicaciones debido al requisito de crear un objeto "
+"Unicode antes de llamar a ``Py_Initialize``. Utilice :c:func:"
+"`PySys_AddWarnOption` en su lugar."
 
 #: ../Doc/whatsnew/3.7.rst:2502
 msgid ""
