mejora redacción tutorial capitulo 3

--- a/tutorial/introduction.po
+++ b/tutorial/introduction.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2022-10-26 19:26+0100\n"
-"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
+"PO-Revision-Date: 2022-11-12 19:40-0300\n"
+"Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
-"X-Generator: Poedit 3.2\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/tutorial/introduction.rst:5
 msgid "An Informal Introduction to Python"
@@ -39,9 +39,9 @@ msgstr ""
 "presencia o ausencia de prompts (:term:`>>>` y :term:`...`): para repetir el "
 "ejemplo, escribe todo después del prompt, cuando aparece; las líneas que no "
 "comienzan con un prompt son emitidas desde el intérprete. Ten en cuenta que "
-"un prompt secundario solo en una linea de ejemplo significa que debes "
-"escribir una línea en blanco. Esto se utiliza para finalizar un comando "
-"multilínea."
+"en un ejemplo un prompt secundario en una linea en solitario significa que "
+"debes escribir una línea en blanco. Esto se utiliza para finalizar un "
+"comando multilínea."
 
 #: ../Doc/tutorial/introduction.rst:16
 msgid ""
@@ -87,7 +87,7 @@ msgid ""
 "Let's try some simple Python commands.  Start the interpreter and wait for "
 "the primary prompt, ``>>>``.  (It shouldn't take long.)"
 msgstr ""
-"Probemos algunos comandos simples de Python. Inicia el intérprete y espere "
+"Probemos algunos comandos simples de Python. Inicia el intérprete y espera "
 "el prompt primario, ``>>>``. (No debería tardar mucho.)"
 
 #: ../Doc/tutorial/introduction.rst:51
@@ -103,7 +103,7 @@ msgid ""
 "grouping. For example::"
 msgstr ""
 "El intérprete puede utilizarse como una simple calculadora; puedes "
-"introducir una expresión y este escribirá los valores. La sintaxis es "
+"introducir una expresión en él y este escribirá los valores. La sintaxis es "
 "sencilla: los operadores ``+``, ``-``, ``*`` y ``/`` funcionan como en la "
 "mayoría de los lenguajes (por ejemplo, Pascal o C); los paréntesis (``()``) "
 "pueden ser usados para agrupar. Por ejemplo::"
@@ -141,8 +141,8 @@ msgid ""
 "The equal sign (``=``) is used to assign a value to a variable. Afterwards, "
 "no result is displayed before the next interactive prompt::"
 msgstr ""
-"El signo igual (``=``) se usa para asignar un valor a una variable. Ningún "
-"resultado se mostrará antes del siguiente prompt interactivo::"
+"El signo igual (``=``) se usa para asignar un valor a una variable. Después, "
+"no se muestra ningún resultado antes del siguiente prompt interactivo::"
 
 #: ../Doc/tutorial/introduction.rst:101
 msgid ""
@@ -257,7 +257,7 @@ msgid ""
 "produces the following output (note that the initial newline is not "
 "included):"
 msgstr ""
-"produce la siguiente salida (tened en cuenta que la línea inicial no está "
+"produce la siguiente salida (tener en cuenta que la línea inicial no está "
 "incluida):"
 
 #: ../Doc/tutorial/introduction.rst:211
@@ -309,13 +309,13 @@ msgstr ""
 msgid ""
 "Indices may also be negative numbers, to start counting from the right::"
 msgstr ""
-"Los índices quizás sean números negativos, para empezar a contar desde la "
-"derecha::"
+"Los índices también pueden ser números negativos, para empezar a contar "
+"desde la derecha::"
 
 #: ../Doc/tutorial/introduction.rst:269
 msgid "Note that since -0 is the same as 0, negative indices start from -1."
 msgstr ""
-"Nota que -0 es lo mismo que 0, los índice negativos comienzan desde -1."
+"Nótese que -0 es lo mismo que 0, los índice negativos comienzan desde -1."
 
 #: ../Doc/tutorial/introduction.rst:271
 msgid ""
@@ -341,7 +341,7 @@ msgid ""
 "Note how the start is always included, and the end always excluded.  This "
 "makes sure that ``s[:i] + s[i:]`` is always equal to ``s``::"
 msgstr ""
-"Nota cómo el inicio siempre se incluye y el final siempre se excluye. Esto "
+"Nótese cómo el inicio siempre se incluye y el final siempre se excluye. Esto "
 "asegura que ``s[:i] + s[i:]`` siempre sea igual a ``s``::"
 
 #: ../Doc/tutorial/introduction.rst:297
@@ -547,8 +547,8 @@ msgid ""
 "follows::"
 msgstr ""
 "Por supuesto, podemos usar Python para tareas más complicadas que sumar dos "
-"y dos. Por ejemplo, podemos escribir una parte inicial de la `serie de "
-"Fibonacci <https://en.wikipedia.org/wiki/Fibonacci_number>`_ así::"
+"más dos. Por ejemplo, podemos escribir una parte inicial de la `serie de "
+"Fibonacci <https://es.wikipedia.org/wiki/Sucesión_de_Fibonacci>`_ así::"
 
 #: ../Doc/tutorial/introduction.rst:496
 msgid "This example introduces several new features."
@@ -623,9 +623,9 @@ msgstr ""
 "La función :func:`print` escribe el valor de los argumentos que se le dan. "
 "Difiere de simplemente escribir la expresión que se quiere mostrar (como "
 "hicimos antes en los ejemplos de la calculadora) en la forma en que maneja "
-"múltiples argumentos, cantidades de punto flotante y cadenas. Las cadenas de "
-"texto son impresas sin comillas y un espacio en blanco se inserta entre los "
-"elementos, así puedes formatear cosas de una forma agradable::"
+"múltiples argumentos, cantidades de punto flotante, y cadenas. Las cadenas "
+"de texto son impresas sin comillas y un espacio en blanco se inserta entre "
+"los elementos, así puedes formatear cosas de una forma agradable::"
 
 #: ../Doc/tutorial/introduction.rst:533
 msgid ""
