--- a/c-api/set.po
+++ b/c-api/set.po
@@ -223,7 +223,7 @@ msgstr ""
 "Añade *key* a una instancia :class:`set`.  También funciona con instancias "
 "de :class:`frozenset` (al igual que :c:func:`PyTuple_SetItem` puede usarse "
 "para rellenar los valores de nuevos frozensets antes de que sean expuestos a "
-"otro código).  Devuelve ``0`` en caso de éxito o ``-1`` en caso de fallo. "
+"otro código).  Retorna ``0`` en caso de éxito o ``-1`` en caso de fallo. "
 "Lanza un error :exc:`TypeError` si la *key* no se puede intercambiar. Lanza "
 "un :exc:`MemoryError` si no hay espacio para crecer.  Lanza un :exc:"
 "`SystemError` si *set* no es una instancia de :class:`set` o su subtipo."
